--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,10 +1,18 @@
-Minecolonies - Cobblemon Conquest -  2.0.1 Changelog
+Minecolonies - Cobblemon Conquest -  2.0.2 Changelog
+
+
+
+Mods Added
+
+
+- More Dragon Eggs
+
 
 
 Mods Updated
 
 
--
+- Advanced Peripherals
 
 
 
@@ -12,3 +20,4 @@ Changes
 
 
 - Pylons should now work in all dimensions.
+- fixed recipe unification issue with biosteel.
