--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,6 +13,11 @@ Mods Updated
 
 
 - Advanced Peripherals
+- Create
+- Create: Applied Kinetics
+- Create Crafts & Additions
+- Create: Filters Anywhere
+- Create Railways Navigator
 
 
 
