--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,14 +1,14 @@
 Minecolonies - Cobblemon Conquest -  2.2.1 Changelog
 
 
-Mods Removed
+Updated to Neoforge 21.1.217
 
 
 
 Mods Added
 
 
--
+- [Cobblemon] Navas' ZAmega (previously ZA for 1.7 datapack)
 
 
 
@@ -26,4 +26,4 @@ Changes
 
 - Outbreaks no longer have a 10% to drop a bottlecap.
 - Changed drop rates and item rarities for lootr pools, added a few items like pokefinders to blacklist.
-- Changed optmimizations to allow some textures and sprites which were previously failing to load, to load.
+- Changed optmimizations to allow some textures and sprites which were previously failing to load, to load properly.
